# Akshara

./: .gitattributes  .gitignore  .gitmodules  Justfile  README.md
aks-generator/: cluster_enum.py  packer.py  pyproject.toml  shaper.py
aks-generator/scripts/: bengali.py  gujarati.py  kannada.py  malayalam.py
aks-generator/test/: render_png.py  test_rasterizer.py
aks-generator/test/test-words/: bengali.txt  devanagari.txt  gujarati.txt  malayalam.txt  telugu.txt
docs/: aks_format_spec.md  segmentation_spec.md
examples/akshara_gxepd2/: akshara_gxepd2.ino
examples/akshara_ili9341/: akshara_ili9341.ino
examples/st7789/: akshara_st7789.ino
examples/u8g2/: akshara_u8g2.ino
fonts/: noto_bengali_regular_22.aks  noto_devanagari_regular_22.aks  noto_gujarati_regular_22.aks  noto_kannada_regular_22.aks  noto_malayalam_regular_22.aks  noto_tamil_regular_22.aks  noto_telugu_regular_22.aks
fonts/10/: noto_bengali_regular_10.aks  noto_devanagari_regular_10.aks  noto_gujarati_regular_10.aks  noto_kannada_regular_10.aks  noto_malayalam_regular_10.aks  noto_tamil_regular_10.aks  noto_telugu_regular_10.aks
fonts/12/: noto_kannada_regular_12.aks
fonts/16/: noto_kannada_regular_16.aks
fonts/22/: noto_bengali_regular_22.aks  noto_devanagari_regular_22.aks  noto_gujarati_regular_22.aks  noto_kannada_regular_22.aks  noto_malayalam_regular_22.aks  (+2 more)
host/: aks2h.py  cluster_enum.py  packer.py  pyproject.toml  rasterizer.py  shaper.py
runtime/: Akshara.h  aks_internal.h  aks_parser.c  akshar.c  akshar.h  akshara.c  akshara.h  blit.c  lookup.c  segmenter.c
(+34 files in other folders)
