[project]
name = "akshara-host"
version = "0.1.0"
description = "Host-side build tool: enumerate clusters, shape with HarfBuzz, rasterize with FreeType, pack .aks files"
requires-python = ">=3.10"
dependencies = [
    "uharfbuzz",
    "freetype-py",
    "Pillow",          # render_png.py desktop validator
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# All modules live flat in aks-generator/; exclude test helpers from the wheel.
include = [
    "aks2h.py",
    "akshara_gen.py",
    "cluster_enum.py",
    "shaper.py",
    "rasterizer.py",
    "packer.py",
    "scripts/",
]

[tool.pytest.ini_options]
testpaths = ["test"]
